# fastapi-fullstack-template

./: .ruff.toml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
