[project]
name = "fastapi-fullstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httptools>=0.7.1",
    "msgspec>=0.20.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis[hiredis]>=7.3.0",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "tzdata>=2025.3",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
